--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,14 @@ jobs:
     # Commit and push
     - name: Commit and push
       run: |
-        cd main
+        cd main/submodule
         ls -la
         date > generated.txt
         git config user.name github-actions
         git config user.email github-actions@github.com
+        git checkout staging
+        git submodule update --remote
+        ls -la
         git add .
         git commit -m "generated"
         git push
