--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,10 @@ jobs:
     # Commit and push
     - name: Commit and push
       run: |
-        cd main/submodule
-        ls -la
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git checkout staging
+        git config -f .gitmodules submodule.main/submodule.branch staging
+        git submodule update --remote
         ls -la
         git add .
         git commit -m "generated"
