--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
     # Commit and push
     - name: Commit and push
       run: |
+        cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.main/submodule.branch staging
