--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,13 +28,23 @@ jobs:
         token: ${{ secrets.PAT }} # `GitHub_PAT` is a secret that contains your PAT
         path: main
 
-    # Commit and push
-    - name: Commit and push
+    # Config - set submodule to staging branch
+    - name: Config - set submodule to staging branch
       run: |
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.main/submodule.branch staging
+
+    # Checkout parent repo
+    - name: Checkout parent repo
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+        
+    # Update, commit, and push
+    - name: Update, commit and push
+      run: |
         git submodule update --remote
         ls -la
         git add .
