--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
         ref: staging
         token: ${{ secrets.PAT }} # `GitHub_PAT` is a secret that contains your PAT
         path: main
+        submodule: true
         
     # Update, commit, and push
     - name: Update, commit and push
