--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,31 +27,17 @@ jobs:
         ref: staging
         token: ${{ secrets.PAT }} # `GitHub_PAT` is a secret that contains your PAT
         path: main
+        submodules: recursive
 
-    # Config - set submodule to staging branch
+    # Config - set submodule to staging branch - update, commit, and push
     - name: Config - set submodule to staging branch
       run: |
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.main/submodule.branch staging
-
-    # Checkout parent repo
-    - name: Checkout parent repo
-      uses: actions/checkout@v2
-      with:
-        repository: gonzalomass/parent
-        ref: staging
-        token: ${{ secrets.PAT }} # `GitHub_PAT` is a secret that contains your PAT
-        path: main
-        submodules: true
-        
-    # Update, commit, and push
-    - name: Update, commit and push
-      run: |
-        cd main
         git submodule update --remote
-        ls -la
+        git config -f .gitmodules submodule.main/submodule.branch staging
         git add .
         git commit -m "generated"
         git push
