--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,9 @@ jobs:
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git config -f .gitmodules submodule.main/submodule.branch staging
+        git config -f .gitmodules submodule.submodule.branch staging
         git submodule update --remote
-        git config -f .gitmodules submodule.main/submodule.branch staging
+        git config -f .gitmodules submodule.submodule.branch master
         git add .
         git commit -m "generated"
         git push
