--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
+        git pull --recurse-submodules
         git config -f .gitmodules submodule.submodule.branch staging
         git submodule update --remote
         git config -f .gitmodules submodule.submodule.branch master
