--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,8 @@ jobs:
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git submodule update --remote
         git config -f .gitmodules submodule.submodule.branch staging
-        git submodule update --remote
+        git submodule.submodule.update --remote
         git config -f .gitmodules submodule.submodule.branch master
         git add .
         git commit -m "generated"
