--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.submodule.branch staging
-        git submodule.submodule.update --remote
+        git submodule update
         git config -f .gitmodules submodule.submodule.branch master
         git add .
         git commit -m "generated"
