--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,14 @@ jobs:
         submodules: true
 
     # Config - set submodule to staging branch - update, commit, and push
+    # git submodule update --remote --merge
     - name: Config - set submodule to staging branch
       run: |
-        cd main
+        cd main/submodule
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.submodule.branch staging
-        git submodule update --remote --merge
+        git pull
         git config -f .gitmodules submodule.submodule.branch master
         git add .
         git commit -m "generated"
