--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         ref: staging
         token: ${{ secrets.PAT }} # `GitHub_PAT` is a secret that contains your PAT
         path: main
-        submodules: true
+        submodules: false
 
     # Config - set submodule to staging branch - update, commit, and push
     # git submodule update --remote --merge
@@ -38,6 +38,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.submodule.branch staging
+        git submodule update --remote
         git config -f .gitmodules submodule.submodule.branch master
         git add .
         git commit -m "generated"
