--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.submodule.branch staging
+        git pull --recurse-submodules
         git submodule update --remote
         git config -f .gitmodules submodule.submodule.branch master
         git add .
