--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         ref: staging
         token: ${{ secrets.PAT }} # `GitHub_PAT` is a secret that contains your PAT
         path: main
-        submodules: false
+        submodules: true
 
     # Config - set submodule to staging branch - update, commit, and push
     # git submodule update --remote --merge
