--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git config -f .gitmodules submodule.submodule.branch staging
+        git config -f .gitmodules submodule.submodule.branch stagings
         rm -rf submodule
         git submodule update --checkout --remote --merge
         git config -f .gitmodules submodule.submodule.branch master
