--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,9 @@ jobs:
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git config -f .gitmodules submodule.submodule.branch stagings
+        git config -f .gitmodules submodule.submodule.branch staging
         rm -rf submodule
-        git submodule sync -- submodule
+        git submodule sync
         git config -f .gitmodules submodule.submodule.branch master
         git add .
         git commit -m "generated"
