--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git config -f .gitmodules submodule.submodule.branch staging
-        rm -rf submodule
-        git submodule sync
+        git pull origin staging --rebase
         git config -f .gitmodules submodule.submodule.branch master
         git add .
         git commit -m "generated"
