--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,14 +32,14 @@ jobs:
     # Config - set submodule to staging branch - update, commit, and push
     # git submodule update --remote --merge
     # git pull origin HEAD:staging --rebase
+    # git config -f .gitmodules submodule.submodule.branch staging
+    # git config -f .gitmodules submodule.submodule.branch master
     - name: Config - set submodule to staging branch
       run: |
         cd main
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git config -f .gitmodules submodule.submodule.branch staging
-        git pull origin staging
-        git config -f .gitmodules submodule.submodule.branch master
+        git pull origin staging --rebase
         git add .
         git commit -m "generated"
         git push
