--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
         cd main/sub
         git config user.name github-actions
         git config user.email github-actions@github.com
+        git checkout staging
         git pull origin staging --rebase
         git add .
         git commit -m "generated"
