--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,9 @@ jobs:
         cd main/sub
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git fetch
-        git checkout staging
+        git remote update
+        git fetch 
+        git checkout --track origin/staging
         git pull origin staging --rebase
         git add .
         git commit -m "generated"
