--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
         git config user.email github-actions@github.com
         git remote update
         git fetch
-        git pull origin staging --ff-only
+        git checkout origin/staging
+        git checkout -b staging
         git add .
         git commit -m "generated"
         git push origin staging
