--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         git config user.email github-actions@github.com
         git remote update
         git fetch
-        git checkout origin/staging
+        git checkout staging
         git checkout -b staging
         git add .
         git commit -m "generated"
