--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
         git remote update
         git fetch
         git checkout -b staging
+        git pull origin staging --rebase
         git add .
         git commit -m "generated"
         git push origin staging
