--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,25 +16,23 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    # - uses: actions/checkout@v2
-
     # Checkout parent repo
     - name: Checkout parent repo
       uses: actions/checkout@v2
       with:
         repository: gonzalomass/parent
         ref: staging
-        token: ${{ secrets.PAT }} # `GitHub_PAT` is a secret that contains your PAT
+        token: ${{ secrets.PAT }}
         path: main
         submodules: true
+    
+    # Get commit message
+    - name: Get commit message
+      run: |
+         echo ::set-env name=commitmsg::$(git log --format=%B -n 1 ${{ github.event.after }})
 
-    # Config - set submodule to staging branch - update, commit, and push
-    # git submodule update --remote --merge
-    # git pull origin staging --rebase
-    # git config -f .gitmodules submodule.submodule.branch staging
-    # git config -f .gitmodules submodule.submodule.branch master
-    - name: Config - set submodule to staging branch
+    # Update submodule
+    - name: Update submodule
       run: |
         git config --global user.name github-actions
         git config --global user.email github-actions@github.com
@@ -45,5 +43,5 @@ jobs:
         git pull origin staging --rebase
         cd ..
         git add sub
-        git commit -m "generated"
+        git commit -m $commitmsg
         git push
