--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,5 @@ jobs:
         git pull origin staging --rebase
         cd ..
         git add sub
-        git commit -m $commitmsg
+        git commit -m "$commitmsg"
         git push
