--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,6 @@ jobs:
         path: main
         submodules: true
     
-    # Get commit message
-    - name: Get commit message
-      run: |
-         echo ::set-env name=commitmsg::$(git log --format=%B -n 1 ${{ github.event.after }})
-
     # Update submodule
     - name: Update submodule
       run: |
@@ -43,5 +38,5 @@ jobs:
         git pull origin staging --rebase
         cd ..
         git add sub
-        git commit -m "$commitmsg"
+        git commit -m github.event.head_commit.message
         git push
