--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,5 @@ jobs:
         git pull origin staging --rebase
         cd ..
         git add sub
-        git commit -m env.commitmsg
+        git commit -m ${{ github.event.head_commit.message }}
         git push
