FREE-0001: feat: commit message broadcast to parent test run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,12 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push.
 on:
   push:
     branches: [ staging ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  submodules_sync:
-    # The type of runner that the job will run on
+  automated_submodule_update:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checkout parent repo
     - name: Checkout parent repo
