--- a/.github/workflows/staging-ci.yml
+++ b/.github/workflows/staging-ci.yml
@@ -8,11 +8,8 @@ jobs:
   staging_ci:
     runs-on: ubuntu-latest
     steps:
-    # Checkout your repository under $GITHUB_WORKSPACE
     - uses: actions/checkout@v2
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Run a front-end build
       run: |
         npm install
         npm run build
