--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         repository: gonzalomass/parent
         ref: staging
-        token: ${{ github.token }}
+        token: ${{ secrets.PAT }}
         path: main
         submodules: true
 
