submodule and branch creation update

--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -29,11 +29,12 @@ jobs:
         cd main/sub
         git remote update
         git fetch
-        git checkout -b staging-sub-update
+        git checkout -b staging
         git pull origin staging --rebase
         cd ..
         git add sub
         git commit -m "${{ github.event.head_commit.message }}"
-        git push
+        git checkout -b staging-sub-update
+        git push origin staging-sub-update:staging-sub-update
         gh pr create -B staging -f -l automerge
         gh pr merge staging-sub-update -m
