--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -40,5 +40,10 @@ jobs:
         sleep 5
         git fetch
         gh pr status
-        until gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing"; do sleep 1; done
+        TIMEOUT=0
+        until [ $TIMEOUT -eq 5 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing"; do
+          sleep 1
+          $(( TIMEOUT++ ))
+        done
+        [ $TIMEOUT -lt 5 ]
         gh pr merge staging-sub-update -m
