--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -37,13 +37,12 @@ jobs:
         git checkout -b staging-sub-update
         git push origin staging-sub-update:staging-sub-update
         gh pr create -B staging -f
-        sleep 5
         git fetch
         gh pr status
         TIMEOUT=0
-        until [ $TIMEOUT -eq 60 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing"; 
-          do sleep 1;
-          echo $(( TIMEOUT++ ))
+        until [ $TIMEOUT -eq 60 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing"
+        do
+          sleep 1
+          ((TIMEOUT++))
         done
-        [ $TIMEOUT -lt 60 ]
         gh pr merge staging-sub-update -m
