--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -43,7 +43,7 @@ jobs:
         until [ gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing" ]
         do
           sleep 1
-          if [ $TIMEOUT -eq 20 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing"
+          if [ $TIMEOUT -eq 20 || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing" ]
           then
             print "ERROR: check failing" >&2
             exit 2
