--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -40,10 +40,10 @@ jobs:
         git fetch
         gh pr status
         TIMEOUT=0
-        until [ gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing" ]
+        until gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing";
         do
           sleep 1
-          if [ $TIMEOUT -eq 20 || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing" ]
+          if [ $TIMEOUT -eq 20 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing";
           then
             print "ERROR: check failing" >&2
             exit 2
