--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -43,9 +43,10 @@ jobs:
         until gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing";
         do
           sleep 1
+          gh pr status
           if [ $TIMEOUT -eq 20 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing";
           then
-            print "ERROR: check failing" >&2
+            print "ERROR: Checks failing" >&2
             exit 2
           fi
           print $((TIMEOUT++))
