--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -40,9 +40,12 @@ jobs:
         git fetch
         gh pr status
         TIMEOUT=0
-        until [ $TIMEOUT -eq 20 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing"
+        until [ $TIMEOUT -eq 60 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing" || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing"
         do
           sleep 1
           echo $((TIMEOUT++))
         done
+        if gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing"; then
+          echo "checks failing" ; exit 2 ;
+        fi
         gh pr merge staging-sub-update -m
