--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -40,12 +40,15 @@ jobs:
         git fetch
         gh pr status
         TIMEOUT=0
-        until [ $TIMEOUT -eq 60 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks passing" || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing"
+        until [ $TIMEOUT -eq 60 ] || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "passing" || gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "failing"
         do
           sleep 1
           echo $((TIMEOUT++))
         done
-        if gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "Checks failing"; then
-          echo "checks failing" ; exit 2 ;
+        if gh pr status | grep -A2 "Current branch" | tail -n1 | grep -q "passing";
+        then
+          echo "checks passing" ;
+          gh pr merge staging-sub-update -m
+        else
+          echo "checks failing, not present or timeout" ; exit 2 ;
         fi
-        gh pr merge staging-sub-update -m
