git commit message

--- a/.github/workflows/staging-cd-to-parent.yml
+++ b/.github/workflows/staging-cd-to-parent.yml
@@ -39,10 +39,10 @@ jobs:
         git pull origin staging --rebase
         cd ..
         git add sub
-        git commit -m "${{ github.event.head_commit.message }}"
+        git commit --author="${{ github.event.head_commit.author.username }} <${{ github.event.head_commit.author.email }}>" -m "${{ github.event.head_commit.message }}"
         git checkout -b staging-sub-update
         git push origin staging-sub-update:staging-sub-update
-        gh pr create -B staging -t "${{ github.event.head_commit.message }}" -b "update submodule by ${{ github.actor }} with commit ${{ github.event.head_commit.id }}"
+        gh pr create -B staging -t "update at ${{ github.repository }} by ${{ github.actor }}" -b "${{ github.event.head_commit.message }} \n commit ${{ github.event.head_commit.id }}"
         git fetch
         gh pr status
         TIMEOUT=0
