--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code and build
+      - name: Checkout code
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
+
+      - name: Build
         run: |
           npm install
           npm run build
