--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,10 @@ jobs:
           WITH_V: true
           RELEASE_BRANCHES: master
 
+      - name: Log
+        run: |
+          echo ${{ steps.bump_tag }}
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
