--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ master ]
     # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    # tags:
+    # - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
   workflow_dispatch:
 
@@ -30,7 +30,7 @@ jobs:
 
       - name: Log
         run: |
-          echo ${{ steps.bump_tag }}
+          echo ${{ steps.bump_tag.tag }}
 
       - name: Create Release
         id: create_release
@@ -51,7 +51,7 @@ jobs:
         run: |
           npm install
           npm run build
-          zip -r submodule-build.zip ./* -x "**/node_modules/*" -x "**/.git/*"
+          zip -r submodule-build.zip ./* -x node_modules/\* -x .git/\*
 
       - name: Upload Release Asset
         id: upload-release-asset 
