ignore only node modules

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           npm install
           npm run build
-          zip -r submodule-build.zip ./* -x node_modules/\* -x .git/\*
+          zip -r submodule-build.zip ./* -x node_modules/\*
 
       - name: Upload Release Asset
         id: upload-release-asset 
