--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,16 @@
-name: Build, tag Bump and release
+name: Release
 
 on:
   push:
-    branches: [ master ]
     # Sequence of patterns matched against refs/tags
-    # tags:
-    # - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
   workflow_dispatch:
 
 jobs:
   build:
-    name: Create Release
+    name: Release
     runs-on: ubuntu-latest
 
     steps:
@@ -19,18 +18,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
-
-      - name: Bump version and push tag
-        id: bump_tag
-        uses: anothrNick/github-tag-action@1.26.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-          WITH_V: true
-          RELEASE_BRANCHES: master
-
-      - name: Log
-        run: |
-          echo ${{ steps.bump_tag.tag }}
 
       - name: Create Release
         id: create_release
