--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,10 @@ jobs:
           npm run build
           zip -r submodule-build.zip ./* -x node_modules/\*
 
+      - name: Log
+        run: |
+          echo ${{ steps.create_release.outputs }}
+
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
@@ -47,6 +51,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./submodule-build.zip
-          asset_name: submodule-build.zip
+          asset_path: ./submodule-build-${{ github.ref }}.zip
+          asset_name: submodule-build-${{ github.ref }}.zip
           asset_content_type: application/zip
