--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           npm install
           npm run build
-          zip -r submodule-build-${{ steps.get_version.outputs.VERSION }}.zip ./* -x node_modules/\*
+          zip -r submodule-build-${{ steps.get_version.outputs.VERSION }}.zip ./* -x node_modules/\* -x assets/\*
 
       - name: Log
         run: |
