--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  tag:
     name: Tag
     runs-on: ubuntu-latest
 
@@ -17,9 +17,16 @@ jobs:
         with:
           fetch-depth: '0'
 
-      - name: Bump version and push tag
+      - name: Bump tag
         id: bump_tag
         uses: anothrNick/github-tag-action@1.26.0
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
           WITH_V: true
+
+      - name: Update readme
+        - uses: pocket-apps/action-update-version@v1
+          with:
+            files: 'README.md'
+            version-regexp: '\d+.\d+.\d+'
+            repo-token: ${{ secrets.PAT }}
