fix(tag workflow): change the action in order to use conventional commits

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -19,7 +19,6 @@ jobs:
 
       - name: Bump tag
         id: bump_tag
-        uses: anothrNick/github-tag-action@1.26.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-          WITH_V: true
+        uses: hennejg/github-tag-action@v4.1.jh1
+        with:
+          github_token: ${{ secrets.PAT }}
