--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,46 +2,39 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [ master ]
 
   workflow_dispatch:
 
 jobs:
-  build:
+  release:
     name: Release
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5.1
         with:
-          fetch-depth: '0'
+          github_token: ${{ secrets.PAT }}
 
-      - name: Create Release
+      - name: Create a GitHub release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            ${{ github.event.head_commit.message }}
-          draft: false
-          prerelease: false
-
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
 
       - name: Build
         id: build
         run: |
           npm install
           npm run build
-          zip -r submodule-build-${{ steps.get_version.outputs.VERSION }}.zip ./* -x node_modules/\* -x assets/\*
+          zip -r submodule-build.zip ./* -x node_modules/\* -x assets/\*
 
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -50,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./submodule-build-${{ steps.get_version.outputs.VERSION }}.zip
-          asset_name: submodule-build-${{ steps.get_version.outputs.VERSION }}.zip
+          asset_path: ./submodule-build.zip
+          asset_name: submodule-build.zip
           asset_content_type: application/zip
