--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.1
         with:
           github_token: ${{ secrets.PAT }}
+          pre_release_branches: staging
 
       - name: Create a GitHub release
         id: create_release
