--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, staging ]
 
   workflow_dispatch:
 
@@ -18,6 +18,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.1
         with:
           github_token: ${{ secrets.PAT }}
+          release_branches: master
           pre_release_branches: staging
 
       - name: Create a GitHub release
