--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   push:
-    branches: [ master ]
+    branches: [ staging ]
 
   workflow_dispatch:
 
@@ -18,7 +18,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.1
         with:
           github_token: ${{ secrets.PAT }}
-          release_branches: master
+          pre_release_branches: staging
 
       - name: Create a GitHub release
         id: create_release
@@ -27,6 +27,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          prerelease: true
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: |
             Changes in this Release
