--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           github_token: ${{ secrets.PAT }}
           pre_release_branches: staging
+          append_to_pre_release_tag: prerelease
 
       - name: Create a GitHub release
         id: create_release
