--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           github_token: ${{ secrets.PAT }}
           release_branches: master
+          append_to_pre_release_tag: prerelease
 
       - name: Create a GitHub release
         id: create_release
