--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -15,11 +15,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         id: tag_version
-        uses: mathieudutour/github-tag-action@v5.1
+        uses: mathieudutour/github-tag-action@v5.2
         with:
           github_token: ${{ secrets.PAT }}
           pre_release_branches: staging
           append_to_pre_release_tag: prerelease
+          default_bump: false
 
       - name: Create a GitHub release
         id: create_release
@@ -42,7 +43,7 @@ jobs:
           zip -r submodule-build.zip ./* -x node_modules/\* -x assets/\*
 
       - name: Upload Release Asset
-        id: upload-release-asset 
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
