--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         id: tag_version
-        uses: mathieudutour/github-tag-action@v5.2
+        uses: onpointglobal/github-tag-action@cac2a7e76bf0c4a7f366a08b8a5460e60af528c4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: master
